--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>Jon Esparaz - Engineering Science Student</title>
+    <title>Jon Esparaz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1a1a1a" />
     <meta
       name="description"
-      content="Jon Esparaz"
+      content="Jon Esparaz's personal portfolio website."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Heebo">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
