preconnect, meta og tags

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
     content="Jon Esparaz is an Engineering Science undergraduate student and freelance software engineer based in Toronto." />
+  <meta property="og:title" content="Jon Esparaz" />
+  <meta property="og:image" content="%PUBLIC_URL%/images/keyboard-1921.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1921" />
+  <meta property="og:image:height" content="1201" />
+  <meta property="og:description"
+    content="Jon Esparaz is an Engineering Science undergraduate student and freelance software engineer based in Toronto." />
+  <link rel="preconnect" href="https://d3posj7vfpgqcz.cloudfront.net">
   <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/icons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/icons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/icons/apple-icon-72x72.png">
