--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description"
     content="Jon Esparaz is an Engineering Science undergraduate student and freelance software engineer based in Toronto." />
   <meta property="og:title" content="Jon Esparaz" />
-  <meta property="og:image" content="%PUBLIC_URL%/images/keyboard-1921.jpg" />
+  <meta property="og:image" content="https://jonesparaz.ca/images/keyboard-1921.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1921" />
   <meta property="og:image:height" content="1201" />
