update description in meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Jon Esparaz is an Engineering Science undergraduate student and freelance software engineer based in Toronto."
+      content="Jon Esparaz is an Engineering Science undergraduate student at the University of Toronto."
     />
     <meta property="og:title" content="Jon Esparaz" />
     <meta
@@ -19,7 +19,7 @@
     <meta property="og:image:height" content="1201" />
     <meta
       property="og:description"
-      content="Jon Esparaz is an Engineering Science undergraduate student and freelance software engineer based in Toronto."
+      content="Jon Esparaz is an Engineering Science undergraduate student at the University of Toronto."
     />
     <link rel="preconnect" href="https://d3posj7vfpgqcz.cloudfront.net" />
     <link
