remove unused font request

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
     <meta name="theme-color" content="#ffffff" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Work+Sans|Raleway"
+      href="https://fonts.googleapis.com/css?family=Work+Sans"
     />
   </head>
   <body>
