--- a/public/index.html
+++ b/public/index.html
@@ -96,9 +96,11 @@
       content="%PUBLIC_URL%/icons/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#ffffff" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Work+Sans"
     />
   </head>
   <body>
